--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 executable aoc
   main-is:             Main.hs
-  other-modules:       Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8
+  other-modules:       Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13
                        , parsec
