--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -17,7 +17,7 @@ cabal-version:       >=1.10
 executable aoc
   main-is:             Main.hs
   other-modules:       Utils, Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day11, Day12
-                       , Day13, Day14, Day15, Day16
+                       , Day13, Day14, Day15, Day16, Day17
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13
                        , parsec
@@ -25,5 +25,6 @@ executable aoc
                        , grid
                        , vector
                        , containers
+                       , hashtables
   hs-source-dirs:      src
   default-language:    Haskell2010
